Applied corrections to enable embedding in iframe without scroll bars. Overflowing invisible elements were the cause

--- a/style/style.css
+++ b/style/style.css
@@ -66,16 +66,13 @@ span.digit:hover {
 }
 
 div#instructions {
-	 text-align: center;
 	 position: absolute;
 	 bottom: 0;
-	 left: 50%;
 }
 
 div#instructions > p {
 	margin: 0;
 	position: relative;
-	left: -50%;
 	width: 457px;
 	background-color: rgba(255, 255, 255, 0.5);
 	text-shadow: 1px 1px #e2e2e2;
@@ -99,7 +96,7 @@ div#place-value > p {
 }
 
 div#restart {
-	visibility: hidden;
+	display: none;
 	margin-top: 150px;
 }
 
